--- a/configs/pacman-online.conf
+++ b/configs/pacman-online.conf
@@ -33,7 +33,7 @@ Include = /etc/pacman.d/mirrorlist
 
 [omarchy]
 SigLevel = Optional TrustAll
-Server = https://pkgs.omarchy.org/$arch
+Server = https://pkgs.omarchy.org/stable/$arch
 
 [monarch]
 SigLevel = Optional TrustAll
